build/classes/plp/enquanto/parser/Enquanto.g4
/* Agradeço a DEUS pelo dom do conhecimento */

grammar Enquanto;

programa : seqComando;     // sequência de comandos

seqComando: comando (';' comando)* ;

comando: ID ':=' expressao                          						# atribuicao
       | 'skip'                                     						# skip
       | 'se' bool ('entao' | 'então') comando 
       	 (('senaose' | 'senãose') bool ('entao' | 'então') comando)*? 
       	 (('senao' | 'senão') comando )?  									# se
       | 'enquanto' bool ('faca' | 'faça') comando             				# enquanto
       | 'exiba' Texto                              						# exiba
       | 'escreva' expressao                        						# escreva
       | '{' seqComando '}'                         						# bloco
       | 'para' ID 'de' expressao 
         'ate' expressao ('faca' | 'faça') comando 							# para
       ;

expressao: INT                                      						# inteiro
         | 'leia'                                   						# leia
         | ID                                       						# id
         | expressao ('*' | '/' | '+' | '-' | '^'  ) expressao              # opBin
         | '(' expressao ')'                        						# expPar
         ;

bool: ('verdadeiro'|'falso')                        						# booleano
    | expressao ('=' | '>' | '>=' | '<' | '<=' | '<>') expressao            # opRel
    | 'nao' bool                                    						# naoLogico
    | bool 'e' bool                                 						# eLogico
    | bool 'ou' bool                                						# ouLogico
    | bool 'xor' bool                                						# xorLogico
    | '(' bool ')'                                  						# boolPar
    ;

INT: ('0'..'9')+ ;
ID: ('a'..'z')+;
Texto: '"' .*? '"';

Espaco: [ \t\n\r] -> skip;
